--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ tramp
 /FlatEarth/c_code/gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabihf/arm-linux-gnueabihf/libc/usr/include/linux/*
 *.md5
 /matlab/data/*.DS_Store
+data_processing/data/teros/figs
+data_processing/data/teros/pkls
