--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ tramp
 *.lst
 /FlatEarth/c_code/gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabihf/arm-linux-gnueabihf/libc/usr/include/linux/*
 *.md5
-/matlab/data/*.DS_Store
+/matlab/data/*
 data_processing/data/teros/figs
 data_processing/data/teros/pkls
